# snarkOS

./: Cargo.toml
account/: Cargo.toml
cli/: Cargo.toml
cli/src/: lib.rs
cli/src/commands/: account.rs
cli/src/commands/developer/: execute.rs  mod.rs
snarkos/: lib.rs
sphinx/: Cargo.toml  README.md
sphinx/src/: lib.rs
