[package]
name = "snarkos-sphinx"
version = "2.2.7"
authors = ["The Aleo Team <hello@aleo.org>"]
description = "A CLI for a decentralized operating system"
homepage = "https://aleo.org"
repository = "https://github.com/AleoHQ/snarkOS"
keywords = [
  "aleo",
  "cryptography",
  "blockchain",
  "decentralized",
  "zero-knowledge",
]
categories = ["cryptography", "operating-systems"]
license = "Apache-2.0"
edition = "2021"

[lib]
path = "src/lib.rs"


[dependencies.anyhow]
version = "1.0.79"


[dependencies.colored]
version = "2"


[dependencies.rand]
version = "0.8"
default-features = false

[dependencies.rand_chacha]
version = "0.3.0"
default-features = false


[dependencies.serde]
version = "1"

[dependencies.serde_json]
version = "1"
features = ["preserve_order"]

[dependencies.snarkos-account]
path = "../account"
version = "=2.2.7"


[dependencies.snarkvm]
workspace = true


[dependencies.ureq]
version = "2.9"


[target."cfg(target_family = \"unix\")".dependencies.nix]
version = "0.27"
